--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <body>
     <h1>Hellow repository</h1>
 
-    <img src="https://i.pinimg.com/originals/c0/b7/7f/c0b77faeb2cb3e67fd1b423c4535f6c3.jpg" alt="">
+    <img width="80" src="https://i.pinimg.com/originals/c0/b7/7f/c0b77faeb2cb3e67fd1b423c4535f6c3.jpg" alt="">
+<br>
+<input type="text">
+<br>
+<input type="radio" name="drink">Чай
+<input type="radio" name="drink">Кофе
+<input type="radio" name="drink">Вода
+
+
+
 </body>
 </html>
