--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document repository</title>
+    <style>
+        h1{
+            font-size: 120;
+            color: aquamarine;
+        }
+        img{
+            border-radius: 65px;
+        }
+        input{
+            color:rgba(35, 150,75, 0.5);
+        }
+
+    </style>
+
 </head>
 <body>
     <h1>Hellow repository</h1>
